--- a/blocks/footer/__list/__item/footer__item.css
+++ b/blocks/footer/__list/__item/footer__item.css
@@ -4,8 +4,12 @@
     margin-right: 18px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
     .footer__item {
         margin: 0 0 32px;
+    }
+
+    .footer__item:last-child {
+        margin: 0;
     }
 }
